--- a/index.html
+++ b/index.html
@@ -1,16 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style.css">
     <title>Abito</title>
 </head>
+
 <body>
     <header>
         <div class="container">
             <div class="header-box">
-                <div class="header-logo">
+                <div href="/" class="header-logo">
                     <img src="./image/box 1.svg" alt="logo">
                     <span>Abito</span>
                 </div>
@@ -19,12 +21,205 @@
                     <button class="btn btn-primary">Подать объявление</button>
                 </div>
                 <div class="header-burger">
-                    <img src="./image/menu (1) 1.svg" alt="burger"
+                    <img src="./image/menu (1) 1.svg" alt="burger" </div>
                 </div>
             </div>
-        </div>
     </header>
-    <div>Search</div> 
-    <main>Content</main>
+
+    <main>
+        <section class="search">
+            <div class="container">
+                <div class="search-box">
+                    <input type="text">
+                    <button class="btn btn-primary search-btn">
+                        <img class="search-btn_icon" src="./image/search.svg" alt="search">
+                        <span class="search-btn_text">Найти</span>
+                    </button>
+                </div>
+            </div>
+        </section>
+        <section class="content">
+            <div class="container">
+                <div class="content-box">
+                    <div class="content-main">
+                        <h2 class="content-main_title">Рекомендации для вас</h2>
+                        <div class="content-main_list">
+                            <a href="http://127.0.0.1:5500/product.html" class="content-main_list-item">
+                                <div class="content-main_list-item-img">
+                                    <img src="./image/Rectangle 3.png" alt="card-img">
+                                </div>
+                                <h5 class="content-main_list-item-title">
+                                    Пвх материал 2й сорт
+                                </h5>
+
+                                <strong class="content-main_list-item-price">
+                                    170 Р
+                                </strong>
+
+                                <div class="content-main_list-item-desc-box">
+                                    <span class="content-main_list-item-desc">
+                                        Казань, р-н Вахитовский
+                                    </span>
+                                    <span class="content-main_list-item-desc">
+                                        10 июля 11:39
+                                    </span>
+                                </div>
+                            </a>
+                            <a href="http://127.0.0.1:5500/product.html" class="content-main_list-item">
+                                <div class="content-main_list-item-img">
+                                    <img src="./image/Rectangle 3.png" alt="card-img">
+                                </div>
+                                <h5 class="content-main_list-item-title">
+                                    Пвх материал 2й сорт
+                                </h5>
+
+                                <strong class="content-main_list-item-price">
+                                    170 Р
+                                </strong>
+
+                                <div class="content-main_list-item-desc-box">
+                                    <span class="content-main_list-item-desc">
+                                        Казань, р-н Вахитовский
+                                    </span>
+                                    <span class="content-main_list-item-desc">
+                                        10 июля 11:39
+                                    </span>
+                                </div>
+                            </a>
+                            <a href="http://127.0.0.1:5500/product.html" class="content-main_list-item">
+                                <div class="content-main_list-item-img">
+                                    <img src="./image/Rectangle 3.png" alt="card-img">
+                                </div>
+                                <h5 class="content-main_list-item-title">
+                                    Пвх материал 2й сорт
+                                </h5>
+
+                                <strong class="content-main_list-item-price">
+                                    170 Р
+                                </strong>
+
+                                <div class="content-main_list-item-desc-box">
+                                    <span class="content-main_list-item-desc">
+                                        Казань, р-н Вахитовский
+                                    </span>
+                                    <span class="content-main_list-item-desc">
+                                        10 июля 11:39
+                                    </span>
+                                </div>
+                            </a>
+                            <a href="http://127.0.0.1:5500/product.html" class="content-main_list-item">
+                                <div class="content-main_list-item-img">
+                                    <img src="./image/Rectangle 3.png" alt="card-img">
+                                </div>
+                                <h5 class="content-main_list-item-title">
+                                    Пвх материал 2й сорт
+                                </h5>
+
+                                <strong class="content-main_list-item-price">
+                                    170 Р
+                                </strong>
+
+                                <div class="content-main_list-item-desc-box">
+                                    <span class="content-main_list-item-desc">
+                                        Казань, р-н Вахитовский
+                                    </span>
+                                    <span class="content-main_list-item-desc">
+                                        10 июля 11:39
+                                    </span>
+                                </div>
+                            </a>
+                            <a href="http://127.0.0.1:5500/product.html" class="content-main_list-item">
+                                <div class="content-main_list-item-img">
+                                    <img src="./image/Rectangle 3.png" alt="card-img">
+                                </div>
+                                <h5 class="content-main_list-item-title">
+                                    Пвх материал 2й сорт
+                                </h5>
+
+                                <strong class="content-main_list-item-price">
+                                    170 Р
+                                </strong>
+
+                                <div class="content-main_list-item-desc-box">
+                                    <span class="content-main_list-item-desc">
+                                        Казань, р-н Вахитовский
+                                    </span>
+                                    <span class="content-main_list-item-desc">
+                                        10 июля 11:39
+                                    </span>
+                                </div>
+                            </a>
+                            <a href="http://127.0.0.1:5500/product.html" class="content-main_list-item">
+                                <div class="content-main_list-item-img">
+                                    <img src="./image/Rectangle 3.png" alt="card-img">
+                                </div>
+                                <h5 class="content-main_list-item-title">
+                                    Пвх материал 2й сорт
+                                </h5>
+
+                                <strong class="content-main_list-item-price">
+                                    170 Р
+                                </strong>
+
+                                <div class="content-main_list-item-desc-box">
+                                    <span class="content-main_list-item-desc">
+                                        Казань, р-н Вахитовский
+                                    </span>
+                                    <span class="content-main_list-item-desc">
+                                        10 июля 11:39
+                                    </span>
+                                </div>
+                            </a>
+
+                    </div>
+                    <div class="content-side">
+                       <h3 class="content-side_title">Сервисы и услуги</h3>
+                       <div class="content-side_box">
+                        <div class="content-side_list">
+                            <div class="content-side_list-item">
+                                <img class="content-side_list-item-img" src="./image/site_info 1.svg" alt="site_info 1">
+                                <h5 class="content-side_list-item-title">Доставка</h5>
+                                <p class="content-side_list-item-text">
+                                    Проверка при получении и возможность бесплатно вернуть товар
+                                </p>
+                            </div>
+
+                             <div class="content-side_list-item">
+                                <img class="content-side_list-item-img" src="./image/site_info 2.svg" alt="site_info 2">
+                                <h5 class="content-side_list-item-title">Автотека</h5>
+                                <p class="content-side_list-item-text">
+                                    Отчёт с историей авто: пробег, владельцы, сведения о залоге, ДТП и ремонтах
+                                </p>
+                            </div>
+
+                             <div class="content-side_list-item">
+                                <img class="content-side_list-item-img" src="./image/site_info 3.svg" alt="site_info 3">
+                                <h5 class="content-side_list-item-title">Онлайн-бронирование жилья</h5>
+                                <p class="content-side_list-item-text">
+                                    Посуточная аренда квартир и домов: большой выбор вариантов для поездок по России
+                                </p>
+                            </div>
+                        </div>
+                       
+
+                        <div class="content-side_footer">
+                            <p class="content-side_footer-item">
+                                © ООО «Абито», 2011–2021
+                            </p>
+                            <a href="#" class="content-side_footer-item">
+                                Полaитика конфиденциальности
+                            </a>
+                            <a href="#" class="content-side_footer-item">
+                                Обработка данных
+                            </a>
+                        </div>
+                       </div>
+                
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
 </body>
+
 </html>
